src/test/ui/lifetimes/lifetime-no-keyword.stderr
error: lifetimes cannot use keyword names
  --> $DIR/lifetime-no-keyword.rs:13:8
   |
LL | fn baz<'let>(a: &'let isize) { } //~ ERROR lifetimes cannot use keyword names
   |        ^^^^

error: lifetimes cannot use keyword names
  --> $DIR/lifetime-no-keyword.rs:13:18
   |
LL | fn baz<'let>(a: &'let isize) { } //~ ERROR lifetimes cannot use keyword names
   |                  ^^^^

error: lifetimes cannot use keyword names
  --> $DIR/lifetime-no-keyword.rs:15:8
   |
LL | fn zab<'self>(a: &'self isize) { } //~ ERROR lifetimes cannot use keyword names
   |        ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/lifetime-no-keyword.rs:15:19
   |
LL | fn zab<'self>(a: &'self isize) { } //~ ERROR lifetimes cannot use keyword names
   |                   ^^^^^

error: aborting due to 4 previous errors

